fix page number wrap

--- a/public/app.css
+++ b/public/app.css
@@ -860,6 +860,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
